--- a/leveleditor.html
+++ b/leveleditor.html
@@ -1,4 +1,76 @@
-<div class="header">The Level Editor</div>
-<div class="content">
-    <img src="images/leveleditor/mainwindow.png" />
-</div>
+                                <div class="header">THE LEVEL EDITOR</div>
+                                <div class="content">
+                                    <div class="row">
+                                        <div class="col">
+                                            <h3>ABOUT</h3>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col">
+                                            <p>This is one of the BIGGEST side projects I’ve worked on. This is a application that I wrote in attempt to learn more about file handling and modification. The general idea is to modify an existing video game. I've also included features such as a grid system, level swapping, statistics and tile data.</p>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col">
+                                            <h3>DEVELOPER TOOLS</h3>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col">
+                                            <ul>
+                                                <li>Visual Studio</li>
+                                                <li>C# .NET Windows Forms</li>
+                                                <li>C# .NET WPF</li>
+                                            </ul>  
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-6 mb-2 text-center">
+                                            <img src="images/leveleditor/mainwindow.png" />
+                                        </div>
+                                        <div class="col-md-6 mb-2 text-center">
+                                            <img src="images/leveleditor/grid.png" />
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-sm-6 mb-2">
+                                            <div class="row">
+                                                <div class="col-12">
+                                                    <h3>HEX EDITING</h3>
+                                                </div>
+                                                <div class="col-12">
+                                                    <p>On a very technical level, this is what modifying the file would look like. I can understand what this is saying, but someone else may not. We are looking at one of the levels, in this case. Instead of making modifications to this level through hex, I decided to write an application that would visualize the data instead.</p>
+                                                </div>
+                                                <div class="col-12">
+                                                    <img src="images/leveleditor/hex.png" />
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-6 mb-2">
+                                            <div class="row">
+                                                <div class="col-12">
+                                                    <h3>LEVEL SWAPPER</h3>
+                                                </div>
+                                                <div class="col-12">
+                                                    <p>Sometimes, it's easy to develop levels that may feel easier or difficult than other levels. Because of this, I added a neat level swapper within the application!</p>
+                                                </div>
+                                                <div class="col-12">
+                                                    <img src="images/leveleditor/levelswapper.png" />
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-12">
+                                            <h3>PALETTE EDITING</h3>
+                                        </div>
+                                        <div class="col-12">
+                                            <p>The palette editor is designed in its own window. Like level data, I had to find the address for the palette within the file itself, so that I could manipulate the values through my windows form application and save it back into the file. This part of the project aids in making modification to the colors within the game.</p>
+                                        </div>
+                                        <div class="col-12">
+                                            <div class="text-center">
+                                                <img src="images/leveleditor/palette.png" />
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
