--- a/index.html
+++ b/index.html
@@ -74,10 +74,140 @@
                     <div style="margin-top: 3rem;"></div>
                     <div class="row">
                         <div class="col">
-                            <div id="ViewLevelEditor" ng-hide="IsViewLevelEditorOff" class="content-container"></div>
+                            <div id="ViewLevelEditor" ng-hide="IsViewLevelEditorOff" class="content-container">
+                                                                <div class="header">THE LEVEL EDITOR</div>
+                                <div class="content">
+                                    <div class="row">
+                                        <div class="col">
+                                            <h3>ABOUT</h3>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col">
+                                            <p>This is one of the BIGGEST side projects I’ve worked on. This is a application that I wrote in attempt to learn more about file handling and modification. The general idea is to modify an existing video game. I've also included features such as a grid system, level swapping, statistics and tile data.</p>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col">
+                                            <h3>DEVELOPER TOOLS</h3>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col">
+                                            <ul>
+                                                <li>Visual Studio</li>
+                                                <li>C# .NET Windows Forms</li>
+                                                <li>C# .NET WPF</li>
+                                            </ul>  
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-6 mb-2 text-center">
+                                            <img src="images/leveleditor/mainwindow.png" />
+                                        </div>
+                                        <div class="col-md-6 mb-2 text-center">
+                                            <img src="images/leveleditor/grid.png" />
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-sm-6 mb-2">
+                                            <div class="row">
+                                                <div class="col-12">
+                                                    <h3>HEX EDITING</h3>
+                                                </div>
+                                                <div class="col-12">
+                                                    <p>On a very technical level, this is what modifying the file would look like. I can understand what this is saying, but someone else may not. We are looking at one of the levels, in this case. Instead of making modifications to this level through hex, I decided to write an application that would visualize the data instead.</p>
+                                                </div>
+                                                <div class="col-12">
+                                                    <img src="images/leveleditor/hex.png" />
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-6 mb-2">
+                                            <div class="row">
+                                                <div class="col-12">
+                                                    <h3>LEVEL SWAPPER</h3>
+                                                </div>
+                                                <div class="col-12">
+                                                    <p>Sometimes, it's easy to develop levels that may feel easier or difficult than other levels. Because of this, I added a neat level swapper within the application!</p>
+                                                </div>
+                                                <div class="col-12">
+                                                    <img src="images/leveleditor/levelswapper.png" />
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-12">
+                                            <h3>PALETTE EDITING</h3>
+                                        </div>
+                                        <div class="col-12">
+                                            <p>The palette editor is designed in its own window. Like level data, I had to find the address for the palette within the file itself, so that I could manipulate the values through my windows form application and save it back into the file. This part of the project aids in making modification to the colors within the game.</p>
+                                        </div>
+                                        <div class="col-12">
+                                            <div class="text-center">
+                                                <img src="images/leveleditor/palette.png" />
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                             <div id="ViewDiscordBot" ng-hide="IsViewDiscordBotOff" class="content-container">
-                                <div class="header">The Discord Bot</div>
-                                <div class="content">The Content</div>
+                                <div class="header">THE DISCORD BOT</div>
+                                <div class="content">
+                                    <div class="row">
+                                        <div class="col">
+                                            <h3>ABOUT</h3>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col">
+                                            <p>I found myself heavily interested in learning more about API endpoints. Discord API is one of the craziest side projects I've gotten myself into. The idea is to create a single page application AND a bot in my Discord server!</p>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-12">
+                                            <h3>DEVELOPER TOOLS</h3>
+                                        </div>
+                                        <div class="col-12">
+                                            <ul>
+                                                <li>Visual Studio Code</li>
+                                                <li>Node.js</li>
+                                                <li>Discord API</li>
+                                            </ul>  
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-12 text-center">
+                                            <img src="images/discord/bot.jpg" />
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-12">
+                                            <h3>DRAWING CANVAS</h3>
+                                        </div>
+                                        <div class="col-12">
+                                            <p>From here, things get a lot more … technical. I started learning about Node.js and decided to create a Discord bot. This bot will be used within my discord server by any of my users in attempt to obtain information related to their profile. I started off by drawing a canvas. This canvas will hold any user information on it, such as their username, the date in which they joined the server, picture and avatar. I also implemented a fun leveling system!</p>
+                                        </div>
+                                        <div class="col-md-6 mb-2 text-center">
+                                            <img src="images/discord/canvas.png" />
+                                        </div>
+                                        <div class="col-md-6 mb-2 text-center">
+                                            <img src="images/discord/canvas2.png" />
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-12">
+                                            <h3>OTHER DETAILS</h3>
+                                        </div>
+                                        <div class="col-12">
+                                            <p>As I mentioned earlier, I've included pretty cool features into my bot, most notably the leveling system. You'll notice the red bar drawn on the canvas in the image below. You'll also see my current level as well. Other features I've included are badges, which would periodically be assigned based on special events or moments within the server.</p>
+                                        </div>
+                                        <div class="col-12 text-center">
+                                            <img src="images/discord/canvas3.png" />
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
