--- a/index.html
+++ b/index.html
@@ -551,6 +551,11 @@
             </main>
             <footer class="border-top footer text-muted" style="margin-top: 2.5rem;">
                 <div class="container-fluid">
+                    <div class="row">
+                            <div class="col-12 text-center">
+                                            <a href="#nav"><i class="bi bi-arrow-up-square-fill" style="font-size: 2.5rem; color: var(--bs-body-color);"></i></a>
+                                        </div>
+                    </div>
                     <div style="height: 10rem;"></div>
                     <div class="row text-center">
                         <div class="col-md-4 offset-md-8">
